build: upgrade & generate & lint
